API photos.js test range downloads, CLIENT add logo, layout reworks etc

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#252525" />
     <meta
       name="description"
-      content="Pixcollector provide VK users ability to view their pictures from saved folder and download it all as one .ZIP file"
+      content="Pixcollector provide to VK users ability to view their pictures from the saved folder and download it all like one ZIP file"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
