ui STORE test user put - update test

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>pixCollector - download your VK saved photos.</title>
+  <title>#PIXcollector - download your VK saved photos.</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
@@ -13,7 +13,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta
     name="description"
-    content="Collector provide to VK users ability to view their pictures from the saved folder and download it all like one ZIP file"
+    content="PIXcollector provide to VK users ability to view their pictures from the saved folder and download it all like one ZIP file"
   />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
