UI index.html update

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>#PIXcollector - download your VK saved photos.</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" type="image/png" href="assets/icons/icon-192x192.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#252525" />
   <meta name="apple-mobile-web-app-capable" content="yes">
