--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -7,7 +7,8 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <!--  <link rel="apple-touch-icon" type="image/png" href="assets/icons/icon-192x192.png">-->
-  <link rel="apple-touch-icon" type="image/png" href="./ui/dist/ui/assets/icons/icon-192x192.png">
+<!--  <link rel="apple-touch-icon" type="image/png" href="./ui/dist/ui/assets/icons/icon-192x192.png">-->
+  <link rel="apple-touch-icon" href="./ui/src/assets/icons/icon-192x192.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#252525">
   <meta name="apple-mobile-web-app-capable" content="yes">
