UI index.html update

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -13,9 +13,9 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta
     name="description"
-    content="PIXcollector provide to VK users ability to view their pictures from the saved folder and download it all like one ZIP file"
-  />
-
+    content="#PIXcollector provide to VK users ability to view their pictures
+    from the saved folder and download it all like one ZIP file"
+  >
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 </head>
 <body class="mat-typography">
